--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,101 @@ main section .project .description p{
 
 
 
+
+.PopOverlay {
+    background-color: rgb(0, 0, 0, 50%);
+    display: flex; /*flex to reveal*/
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.PopUp {
+    width: 50%;
+    height: 80vh;
+    background-color: #FCF6F5;
+    border-radius: 5%;
+    position: relative;
+      position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* optional */
+  width: 50%;
+  height: 80vh;
+  background-color: #FCF6F5;
+  border-radius: 5%;
+}
+
+.popup-thumbnail {
+    background-color: rgb(42, 42, 42);
+    width: 100%;
+    height: 50%;
+    border-radius: 5% 5% 0% 0%;
+}
+
+.popup-content {
+    padding: 0 1.5rem;
+}
+
+.popup-content h1 {
+    margin-top: 2rem;
+    margin-bottom: .75rem;
+    font-size: clamp(2rem, 2.5vw, 8rem);
+}
+
+.popup-content p {
+    margin-top: 0;
+    font-size: clamp(1rem, 1.25vw, 6rem);
+}
+
+.probutt {
+    border: none;
+    background-color: #2BAE66;
+    color: #FCF6F5;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    font-size: clamp(1rem, 1.25vw, 7rem);;
+    font-weight: 600;
+    margin: 2rem 0;
+    cursor: pointer;
+}
+
+.button-wrap {
+    display: flex;
+    justify-content: center;
+    margin-top: auto;
+}
+
+.close-butt {
+    position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  font-weight: 900;
+  cursor: pointer;
+  color: #FCF6F5;
+  background-color: #2BAE66;
+  border-radius: 10rem;
+  width:10%;
+  height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+
+
+
 @media (max-width: 1300px) {
     header ul li a {
         font-size: 1rem;
@@ -226,6 +321,15 @@ aside {
 }
 
 }
+
+@media (max-width: 600px) {
+    
+    .PopUp {
+        width: 90vw;
+        height: 80vh;
+    }
+}
+
 
 @media (max-width: 570px) {
     header ul li a {
@@ -483,4 +587,17 @@ aside .icons .social-icons {
   .project .description p {
     font-size: 1.75rem;
   }
+}
+
+
+
+
+
+
+@media (min-width: 600px) and (max-width: 1024px) {
+    .PopUp {
+        width: 75%;
+        height: 75vh;
+        max-height: 750px;
+    }
 }
