First draftgit add .!

--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,12 @@ main section .project {
     background-color: white;
     flex: 1 1 calc(33.33% - 2em);
     box-sizing: border-box;
-    min-width: 220px; 
+    min-width: 250px; 
+}
+
+main section .project:hover {
+    background-color: #bdffc6;
+    border: 1px solid #2BAE66;
 }
 
 main section .project .thumbnail {
@@ -162,22 +167,41 @@ main section .project .description p{
 }
 
 
+#Recipe img, #Blogr img, #Japan img, #Code-Portfolio img {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
 
 
 
 
 .PopOverlay {
     background-color: rgb(0, 0, 0, 50%);
-    display: flex; /*flex to reveal*/
+    display: none; /*flex to reveal*/
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-    z-index: 9999;
+    height: 100%;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
 }
+
+/*
+    .PopUp {
+    height: audo;
+    
+    .PopOverlay{
+    padding: 10% 0;
+    }
+*/
+
 
 .PopUp {
     width: 50%;
@@ -185,15 +209,11 @@ main section .project .description p{
     background-color: #FCF6F5;
     border-radius: 5%;
     position: relative;
-      position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* optional */
-  width: 50%;
-  height: 80vh;
-  background-color: #FCF6F5;
-  border-radius: 5%;
-}
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* optional */
+}   
 
 .popup-thumbnail {
     background-color: rgb(42, 42, 42);
@@ -202,8 +222,15 @@ main section .project .description p{
     border-radius: 5% 5% 0% 0%;
 }
 
+.popup-thumbnail img{
+    background-color: rgb(42, 42, 42);
+    width: 100%;
+    height: 100%;
+    border-radius: 5% 5% 0% 0%;
+}
+
 .popup-content {
-    padding: 0 1.5rem;
+    padding: 0 2rem;
 }
 
 .popup-content h1 {
@@ -225,7 +252,6 @@ main section .project .description p{
     border-radius: 1rem;
     font-size: clamp(1rem, 1.25vw, 7rem);;
     font-weight: 600;
-    margin: 2rem 0;
     cursor: pointer;
 }
 
@@ -233,6 +259,7 @@ main section .project .description p{
     display: flex;
     justify-content: center;
     margin-top: auto;
+    padding: 0rem 0 2rem 0;
 }
 
 .close-butt {
@@ -254,6 +281,13 @@ main section .project .description p{
     justify-content: center;
 }
 
+span {
+    display: none;
+}
+
+.popup-wrap a{
+    color: #0f6f3a;
+}
 
 
 
@@ -271,6 +305,8 @@ main section .project .description p{
     font-size: 3rem;
     color: #FCF6F5;
 }
+
+
 
 aside .icons .social-icons {
     margin-top: 2rem;
@@ -319,15 +355,37 @@ aside {
 .profile img {
     width: 66%;
 }
+}
 
+
+@media (min-width: 600px) and (max-width: 1024px) {
+    .PopUp {
+        width: 75%;
+        max-height: 700px;
+    }
 }
 
 @media (max-width: 600px) {
-    
+
     .PopUp {
         width: 90vw;
-        height: 80vh;
+        min-height: 80vh;
     }
+
+    .button-wrap {
+    background-color: #FCF6F5;
+    border-radius: 0 0 10% 10%;
+    }
+
+      .popup-content {
+    padding: 0rem 1rem;
+    margin: 0rem;
+}
+
+    .popup-thumbnail {
+        margin-bottom: -.5rem;
+    }
+
 }
 
 
@@ -344,6 +402,8 @@ main {
 aside .icons .social-icons {
     gap:3rem;
 }
+
+
 
 }
 
@@ -433,7 +493,7 @@ aside .icons .social-icons {
     }
 
     .header-active nav ul li {
-         margin: 1rem;
+         margin: 1rem 0rem;
     }
 
     .header-active nav ul {
@@ -514,7 +574,13 @@ aside .icons .social-icons {
   .project .description p {
     font-size: 1.25rem;
   }
+
+  .popup-content {
+    padding: 2rem 5rem;
 }
+
+}
+
 
 
 /*4K SCREENS*/
@@ -587,17 +653,4 @@ aside .icons .social-icons {
   .project .description p {
     font-size: 1.75rem;
   }
-}
-
-
-
-
-
-
-@media (min-width: 600px) and (max-width: 1024px) {
-    .PopUp {
-        width: 75%;
-        height: 75vh;
-        max-height: 750px;
-    }
 }
